projeto finalizado responsivo com rodape

--- a/Landing_Page_Instagram.html
+++ b/Landing_Page_Instagram.html
@@ -11,37 +11,63 @@
 </head>
 
 <body>
-    <div class="instagram-wrapper">
-        <div class="instagram-phone">
-            <img src="./imagens/instagram-celular.png" alt="logo instagram">
-        </div>
-        <div class="instagram-continue">
-            <div class="group">
-                <img src="./imagens/instagram-logo.png" class="instagram-logo" alt="logo do instagram">
-                <div class="profile-photo">
-                    <img src="./imagens/perfil-instagram2.jpg" alt="imagem do perfil">
-                </div>
-                <a href="" class="instagram-login">Continuar como stupidwinter</a>
-                <a href="" class="instagram-logout">Remover conta</a>
-            </div>
-            <div class="group">
-                <p class="not-account">Não é stupidwinter?</p>
-                <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
-                    ou
-                    <span class="link-blue">Inscreva-se</span>
-                </p>
-            </div>
-            <div class="get-the-app">
-                <p class="get-the-app">Baixe o aplicativo</p>
-                <div class="download">
-                    <a href="#" class="app-download"> </a>
-                    <a href="#" class="app-download"></a>
-                </div>
-            </div>
-        </div>
-    </div>
 
+    <div class="instagram-wrapper">
+        <div class="pagina">
+            <div class="instagram-phone">
+                <img src="./imagens/instagram-celular.png" alt="logo instagram">
+            </div>
+            <div class="instagram-continue">
+                <div class="group">
+                    <img src="./imagens/instagram-logo.png" class="instagram-logo" alt="logo do instagram">
+                    <div class="profile-photo">
+                        <img src="./imagens/perfil-instagram2.jpg" alt="imagem do perfil">
+                    </div>
+                    <a href="" class="instagram-login">Continuar como stupidwinter</a>
+                    <a href="" class="instagram-logout">Remover conta</a>
+                </div>
+                <div class="group">
+                    <p class="not-account">Não é stupidwinter?</p>
+                    <p class="not-account">
+                        <span class="link-blue">Alternar contas</span>
+                        ou
+                        <span class="link-blue">Inscreva-se</span>
+                    </p>
+                </div>
+                <div class="get-the-app">
+                    <p class="get-the-app">Baixe o aplicativo</p>
+                    <div class="download">
+                        <a href="#" class="app-download"> </a>
+                        <a href="#" class="app-download"></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <footer>
+            <div>Meta</div>
+            <div>Sobre</div>
+            <div>Blog</div>
+            <div>Carreiras</div>
+            <div>Ajuda</div>
+            <div>API</div>
+            <div>Privacidade</div>
+            <div>Termos</div>
+            <div>Principais contas</div>
+            <div>Hashtags</div>
+            <div>Localização</div>
+            <div>Instagram Lite</div>
+            <div>Carregamento de contatos e não usuários</div>
+            <div>Dança</div>
+            <div>Comida e Bebida</div>
+            <div>Casa e jardim</div>
+            <div>Música</div>
+            <div>Artes visuais</div>
+            <div>Portugues(Brasil)</div>
+            <div>2022 Instagram from Meta</div>
+        </footer>
+
+    </div>
 </body>
 
 </html>
